[gd_scene load_steps=8 format=3 uid="uid://bspxvye0235yh"]

[ext_resource type="PackedScene" uid="uid://cleiei2vfek4b" path="res://cenas/Isabela/Pedido_02/2D_Layout_Pedido_02.tscn" id="1_l0dek"]
[ext_resource type="PackedScene" uid="uid://52svw2c82d53" path="res://cenas/Isabela/cenários/Recepção_cenário.tscn" id="2_cei1r"]
[ext_resource type="PackedScene" uid="uid://cy2m7gojnruft" path="res://cenas/Isabela/personagens/Cherry/Cherry_sem_caixa.tscn" id="3_kxugr"]
[ext_resource type="Script" path="res://scripts/Isabela/Pedido_02/Cherry_sem_caixa.gd" id="4_f87uk"]

[sub_resource type="Animation" id="Animation_wpsr1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.54277, 0, -7.9131)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rpifc"]
resource_name = "chegando"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.54277, 0, -7.9131), Vector3(-1.54277, 0, -3.99012), Vector3(-0.0254765, 0, -1.18314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1, 2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0.384566, 0), Vector3(0, 0.384566, 0), Vector3(0, 0.0345052, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hs8fg"]
_data = {
"RESET": SubResource("Animation_wpsr1"),
"chegando": SubResource("Animation_rpifc")
}

[node name="Pedido_2" type="Node3D"]

[node name="Node pai_Feedback Cookie" parent="." instance=ExtResource("1_l0dek")]

[node name="cenário completo2" parent="." instance=ExtResource("2_cei1r")]

[node name="cherry5SEMCAIXA" parent="." instance=ExtResource("3_kxugr")]
transform = Transform3D(0.131997, 0, 0, 0, 0.131997, 0, 0, 0, 0.131997, -1.54277, 0, -7.9131)
script = ExtResource("4_f87uk")

[node name="Chegando" type="AnimationPlayer" parent="cherry5SEMCAIXA"]
libraries = {
"": SubResource("AnimationLibrary_hs8fg")
}

[connection signal="animação_andar" from="Node pai_Feedback Cookie" to="cherry5SEMCAIXA" method="_on_node_pai_feedback_cookie_animação_andar"]
[connection signal="animation_finished" from="cherry5SEMCAIXA/Chegando" to="cherry5SEMCAIXA" method="_on_chegando_animation_finished"]
